--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~45.0.0",
+    "expo-linking": "~3.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-paper": "^4.12.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -22,6 +27,10 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "private": true
 }
